--- a/index.html.html
+++ b/index.html.html
@@ -11,7 +11,7 @@
 <body>
 <div class="sec1">
 
-    <img src="./index_files/logo.png" width="150px" height="150px" alt="">
+    <img src=".//download.jpg" width="150px" height="150px" alt="">
     <p>Front end web developer</p>
     <p>I have strong passion in creating mobile friendly web applications</p>
     <hr>
